# Hei

./: .gitignore  .gitmodules  CMakeLists.txt  GameClient.cpp  Result.json  windowsToolchain.cmake
CMake/: Client.cmake  Server.cmake
Hei/: README.md
Hei/Resources/Shaders/: quad2D.frag  quad2D.vert  shader.frag  skybox.frag  skybox.vert  terrain.frag  terrain.vert  textShader.frag  textShader.vert
Hei/Source/: Chunk.h  Events.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  GameServer.h  Main.cpp  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesConstants.h  Movement.cpp  Movement.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainRenderer.cpp  TerrainRenderer.h  TestRotationScript.cpp  TestRotationScript.h
Hei/Source/DedicatedServer/: Main.cpp
Hei/Source/Server/: GameServer.cpp  GameServer.h
Hei/archive/: TerrainGenerator.cpp  TerrainGenerator.h  TerrainRenderer.cpp
